<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/navigation_school_info"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_school_info" />

    <item
        android:id="@+id/navigation_hours"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/title_hours" />

    <item
        android:id="@+id/navigation_contact_us"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/button_title_contact_us" />
</menu>