<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hours_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the_category_you_want_to_log_hours_for"
            android:textSize="25sp" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/teaching_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_teaching" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/events_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_events_including_donations_and_drives" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>