<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hours.HoursActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="523dp"
        android:layout_height="344dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hours_time"
        tools:layout_editor_absoluteY="-102dp" />

    <TextView
        android:id="@+id/text_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_hours"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/calendar_table"
        android:layout_width="429dp"
        android:layout_height="142dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hours"
        app:layout_constraintVertical_bias="0.008">

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_service_category" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/text_number_of_hours" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_teaching" />

            <TextView
                android:id="@+id/num_of_hours_teaching"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/zero_number" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_events_including_donations_and_drives" />

            <TextView
                android:id="@+id/num_of_hours_events"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/zero_number" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_total" />

            <TextView
                android:id="@+id/total_num_hours"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/zero_number" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Class Hours"
        app:layout_constraintBottom_toTopOf="@+id/hours_listview"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="Event Hours"
        app:layout_constraintBottom_toTopOf="@+id/hours_listview"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/hours_listview"
        android:layout_width="425dp"
        android:layout_height="136dp"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_table" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>